force-app/main/default/objects/LASERCA__Inquiries__c/LASERCA__Inquiries__c.object-meta.xml
<CustomObject>
    <customHelpPage>LASERCA__CreditSettings</customHelpPage>
    <description>Credit Inquiries on the borrower.</description>
    <label>Inquiries</label>
    <nameField>
        
        <label>Inquiries Name</label>
        
        
        <type>Text</type>
        
    </nameField>
    <pluralLabel>Inquiries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>