force-app/main/default/objects/LASERCA__Inquiries__c/fields/LASERCA__Competitor__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Competitor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Competitor</label>
    <type>Checkbox</type>
</CustomField>