force-app/main/default/objects/LASERCA__Inquiries__c/fields/LASERCA__CreditBureau__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__CreditBureau__c</fullName>
    <description>Credit bureau or MergedData</description>
    <label>Credit Bureau</label>
    <length>20</length>
    <type>Text</type>
</CustomField>