force-app/main/default/objects/LASERCA__Inquiries__c/fields/LASERCA__Date__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Date__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>