force-app/main/default/objects/LASERCA__Inquiries__c/fields/LASERCA__Type__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Type__c</fullName>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>